# terra-mystica

./: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CLAUDE.md  FEATURE_PLAN.md  GH_Issues.md  README.md  docker-compose.gpu.yml  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile.dev  README_CREWAI_STATUS.md  alembic.ini  pyproject.toml  test_s3_endpoints.py  validate_system.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_user_tables.py  0003_add_image_tables.py  003_add_s3_fields_to_images.py
backend/app/: main.py
backend/app/agents/: __init__.py  base.py  crew.py  cultural.py  environmental.py  geographic.py  research.py  validation.py  visual.py
backend/app/agents/tools/: __init__.py  mcp_tools.py  simple_tools.py
backend/app/api/: websocket.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: auth.py  geolocation.py  health.py  images.py  images_s3.py
backend/app/core/: config.py  deps.py  logging.py
backend/app/mcp/: __init__.py  config.py  fastapi_server.py  postgres_server.py
backend/app/schemas/: __init__.py  auth.py  image.py
backend/app/services/: __init__.py  geolocation.py  s3.py
backend/app/utils/: __init__.py  auth.py  image_processing.py
backend/mcp/: INSTALLATION.md  README.md  __init__.py  __main__.py  cli.py  config.py  fastapi_integration.py  server.py
backend/mcp/tools/: __init__.py  directory.py  environment.py  filesystem.py  http.py
backend/scripts/: init-db.sql  start_mcp_server.py
backend/tests/: test_agents.py  test_environment_validation.py  test_integration.py  test_mcp_tools.py
backend/uploads/: .gitignore
docs/: AGENT_ARCHITECTURE.md  CREWAI_IMPLEMENTATION.md  SINGLE_LLM_VS_MULTI_AGENT.md
frontend/: Dockerfile.dev  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
frontend/app/api/health/: route.ts
frontend/app/auth/login/: page.tsx
frontend/app/auth/register/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/auth/: api-key-manager.tsx  login-form.tsx  profile-form.tsx  register-form.tsx
frontend/components/ui/: button.tsx  dialog.tsx
frontend/components/upload/: image-upload-zone.tsx  upload-progress.tsx  uploaded-images.tsx
frontend/contexts/: auth-context.tsx
frontend/hooks/: use-auth.ts
frontend/styles/: globals.css
frontend/types/: auth.ts
infrastructure/helm/terra-mystica/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
infrastructure/helm/terra-mystica/templates/: _helpers.tpl  backend-deployment.yaml  backend-ingress.yaml  backend-service.yaml  celery-deployment.yaml  frontend-deployment.yaml  frontend-ingress.yaml  frontend-service.yaml
infrastructure/k8s/: argocd-app.yaml  kind-config.yaml
infrastructure/k8s/terra-mystica/: backend-deployment.yaml  frontend-deployment.yaml  namespace.yaml
